# paper_pv_surrogate_eurocast

./: .cruft.json  .gitignore  .gitlab-ci.yml  Dockerfile-base  Dockerfile-cuda  Dockerfile-pvgis-downloader  Dockerfile-test  README.MD  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.md  reference.md
pv_surrogate_eurocast/: __init__.py  constants.py  dataset.py  main.py  typedef.py
pv_surrogate_eurocast/scripts/: download_pvgis_data.py  eval_location_dropoff.py  eval_per_param_and_error.py  evaluate_models.py  find_extrema.py  find_starting_points.py  geophere_station_positions.py  helper.py  prepare_parameter_distribution.py  setup_project.py
pv_surrogate_eurocast/scripts/evaluation/: fixed_points.py
pv_surrogate_eurocast/scripts/models/: dl-pretraining.py  symreg-pretraining.py
pv_surrogate_eurocast/scripts/preprocessing/: download_pvgis_data.py  download_system_data.py  find_extrema.py  find_starting_points.py  prepare_parameter_distribution.py
