# https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "pv-surrogate-eurocast"
version = "0.0.1"
description = "Contains all the code for the eurocast 2024 paper 'Surrogates for Fair-Weather Photovoltaic Module Output'."
authors = [
  "Dominik Falkner <dominik.falkner@risc-software.at>"
]
readme = "README.MD"
repository = "https://github.com/user/my-package"
packages = [
  { include = "pv_surrogate_eurocast" }
]
classifiers = [
    "Programming Language :: Python :: 3",
]

# https://python-poetry.org/docs/repositories/#using-a-private-repository
[[tool.poetry.source]]
name = "risc-pypi"
url = "https://pypiserver.risc-software.at/simple/"
priority = "explicit"

# https://python-poetry.org/docs/dependency-specification/
[tool.poetry.dependencies]
python = "^3.10"

# https://python-poetry.org/docs/master/managing-dependencies/
pvoutput-ocf = "^0.1.30"
pyarrow = "^14.0.2"
pandera = "^0.18.0"
geopandas = "^0.14.2"
prefect = "^2.14.17"
seaborn = "^0.13.2"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
geopy = "^2.4.1"
neuralforecast = "^1.6.4"
hyperopt = "^0.2.7"
pysr = "^0.17.1"
[tool.poetry.group.dev.dependencies]  
poethepoet = "^0.20.0"
black = { version = "^23.3.0", extras = ["jupyter"] }
ruff = "^0.0.272"
isort = "^5.12.0"
pytest = "^7.3.2"
pytest-clarity = "^1.0.1"
pytest-cov = "4.1.0"
pytest-xdist = "^3.3.1"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.15"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}

# https://github.com/nat-n/poethepoet
tensorboard = "^2.16.2"
[tool.poe.tasks]
_format = "black ."
_sort_imports = "isort ."
_lint = "ruff check --fix ."

_check_format = "black --check ."
_check_sort_imports = "isort --check ."
_check_lint = "ruff check ."

docs = "mkdocs serve"
precommit = ["_format", "_sort_imports", "_lint"]
check = ["_check_format", "_check_sort_imports", "_check_lint"]
test = "pytest"

[[tool.poe.tasks.setup-project]]
script = "pv_surrogate_eurocast.scripts.setup_project:main"
help = "Sets up the structure for the project. Downloads Geo data"

[[tool.poe.tasks.prep-parameters]]
script = "pv_surrogate_eurocast.scripts.data.prepare_parameter_distribution:main"
help = "Prepares parameter distribution by enriching open_mastr data using pvoutput data"

[[tool.poe.tasks.download_pvgis_data]]
script = "pv_surrogate_eurocast.scripts.data.download_pvgis_data:main"
help = "Prepares parameter distribution by enriching open_mastr data using pvoutput data"

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 120

# https://pycqa.github.io/isort/docs/configuration/config_files
[tool.isort]
profile = "black"

# https://docs.pytest.org/en/7.1.x/reference/customize.html
[tool.pytest.ini_options]
addopts = "--color=yes --doctest-modules  -ra --cov --cov-report=html --cov-report term --exitfirst --failed-first --strict-config --strict-markers --verbosity=2 --junitxml=python-junit.xml"
xfail_strict = true
pythonpath = ["pv_surrogate_eurocast"]
testpaths = ["pv_surrogate_eurocast", "tests"]
# ignore any of these paths
norecursedirs = [ ]

# https://github.com/charliermarsh/ruff
[tool.ruff]  
fix = true
ignore-init-module-imports = true
line-length = 120
src = ["pv_surrogate_eurocast", "tests"]

[tool.ruff.pycodestyle]
max-doc-length = 120

[tool.ruff.pydocstyle]
convention = "google"
